making return home button line mobile responsive

--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -47,4 +47,4 @@ block content
             .row.mt-3
                 .col-md-12.text-center
                     p.d-inline.mr-2 Confused or need to start over?
-                    a.btn.btn-sm.d-inline.returnHomeBtn(href='/', role='button') Return Home
+                    a.btn.btn-sm.returnHomeBtn(href='/', role='button') Return Home
