--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -40,7 +40,7 @@ block content
                         .form-row.mb-5.mx-auto
                         label.sr-only(for='drugSearch') Drug Search
                         input#drugSearch.form-control.mr-4.align-middle(type='text', placeholder='Ex: lip')
-                        button#drugSearchSubmit.btn.userTypeBtn(type='submit', value='Submit') Search
+                        button#drugSearchSubmit.btn.userTypeBtn(type='submit') Search
                 #drugSearchResultsDiv.col-md-6.text-center
                     p Results will appear below after you click Search:
             // Return Home Row -- need on all pages except Home
