--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -19,7 +19,7 @@ block content
                     .dropdown.mr-4
                         button#dropdownNDFindYouButton.btn.btn-lg.dropdown-toggle.rxInputDD(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Email Addresses
                         .dropdown-menu(aria-labelledby='dropdownNDFindYouButton')
-                            // insert anchor tag with classes: .dropdown-item and something for this group, give each unique one an ID, and href just #
+                            // insert anchor tag with classes: .dropdown-item and something for this group, give each unique one an ID, and NO HREF
             form(method='POST', action='api/interaction')
                 .form-group.mb-4.text-center.clearfix
                     // User inputs Drug1
