even more changes

--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -43,7 +43,7 @@ block content
                             // DARRENS CHANGE
                             input#drugSearch.mr-4.align-middle.form-control(name='searchString1', type='text', placeholder='Ex: lip')
                             // DARRENS CHANGE
-                            input#drugSearch.mr-4.align-middle.form-control(name='searchString2', type='text', placeholder='Ex: lip')
+                            // input#drugSearch.mr-4.align-middle.form-control(name='searchString2', type='text', placeholder='Ex: lip')
                             // DARRENS CHANGE
                             input.btn.btn-warning(type='submit', value='Search')
             .row
