updated path to home page in buttons on the following pages drugs/interaction-results, drugs/new, user/new and also updated the path inside the apiRoute.js file

--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -55,4 +55,4 @@ block content
             // Return Home Row -- need on all pages except Home
             .row.mt-3
                 .col-md-12.text-center
-                    a.btn.btn-sm.returnHomeBtn(href='/', role='button') Return Home
+                    a.btn.btn-sm.returnHomeBtn(href='/home', role='button') Return Home
