--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -21,9 +21,9 @@ block content
                         // DARREN'S EDIT
                         input#dropdownNDFindYouButton.btn.btn-warning(type='submit', value='Email Addresses')
                         br
-                        select#emailReturn
+                        // RETURN EMAILS IN SELECT LIST
+                        select#emailReturn(name='userEmailSelect', type='text')
                             option(value='') Select
-                        // insert anchor tag with classes: .dropdown-item and something for this group, give each unique one an ID, and NO HREF
             form(method='POST', action='api/interaction')
                 .form-group.mb-4.text-center.clearfix
                     // User inputs Drug1
@@ -47,15 +47,12 @@ block content
                             // DARRENS CHANGE
                             input#drugSearch.mr-4.align-middle.form-control(name='searchString1', type='text', placeholder='Ex: lip')
                             // DARRENS CHANGE
-                            // input#drugSearch.mr-4.align-middle.form-control(name='searchString2', type='text', placeholder='Ex: lip')
-                            // DARRENS CHANGE
-                            input.btn.btn-warning(type='submit', value='Search')
+                            input#drugSearchBtn.btn.btn-warning(type='submit', value='Search')
             .row
                 #drugSearchResultsDiv.col-md-8.mx-auto.text-center.mb-4
-                    // insert the drug search results from API
+                    // INSERT RESULTS FROM DRUG NAME API
                     // DARRENS CHANGE
-                    p= drugnames1
-                    p= drugnames2
+                    div#drugReturnList
             // Return Home Row -- need on all pages except Home
             .row.mt-3
                 .col-md-12.text-center
