updates to results page to show interaction data

--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -57,7 +57,9 @@ block content
                 #drugSearchResultsDiv.col-md-8.mx-auto.text-center.mb-4
                     // INSERT RESULTS FROM DRUG NAME API
                     // DARREN'S EDIT
+                    // AFTER INTERACTION SEARCH WE REPLACE DRUG NAME RESULTS WITH INTERACTION RESULTS; Search BUTTON CLEARS DIVS
                     div#drugReturnList
+                    div#drugInteractionsReturn
             // Return Home Row -- need on all pages except Home
             .row.mt-3
                 .col-md-12.text-center
