found minor typo in option

--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -23,7 +23,7 @@ block content
                     form(method='GET', action='/users')
                     .form-group
                         select#emailReturn.custom-select.btn.userTypeBtn
-                            option(selected='') Email Addresses:
+                            option(value='') Email Addresses:
                 .col-md-8
                     form.form-inline(method='POST', action='/api/interaction')
                         .form-row
