changed class on Email Addresses drop down for style preference

--- a/views/new-drug.pug
+++ b/views/new-drug.pug
@@ -22,7 +22,7 @@ block content
                     // User selects Email
                     form
                         .form-group
-                            select#emailReturn.custom-select.btn.userTypeBtn
+                            select#emailReturn.custom-select.btn.rxInputDD
                                 option(value='') Email Addresses:
                 .col-md-8
                     form.form-inline(method='POST', action='/api/interaction')
